--- a/novo estudo/exe02.html
+++ b/novo estudo/exe02.html
@@ -34,7 +34,7 @@ JOGADOR 2 :
 
     </div>
 <div class="container">
-    <div class="item div1"></div>
+    <div class="item div1">-</div>
     <div class="item div2"></div>
     <div class="item div3"></div>
 </div>
